# opencl-test

./: .gitignore  CMakeLists.txt  README.md
src/: cl.c
